# Big-Data

./: requirements_py3.txt
MDS/: Notebook.R
WordCount/: CMakeLists.txt  main.cpp  main.py  outputSecuecial.txt  secuencial.cpp
WordCount/Outputs/: output2GB.txt  output5GB.txt  outputSecuecial2GB.txt  outputSecuecial5GB.txt
